Fixed spacing and type

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -227,6 +227,7 @@ nav h3 {
   text-transform: uppercase;
   font-size: 12px;
   color: #999;
+  line-height: 12px;
 }
 
 nav .nav-links {
@@ -441,6 +442,8 @@ i.fa-hn {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  -moz-box-sizing: border-box; 
+  box-sizing: border-box;
 }
 .contact-form-fullwidth {
   width: 100%;
@@ -448,6 +451,8 @@ i.fa-hn {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  -moz-box-sizing: border-box; 
+  box-sizing: border-box;
 }
 #contact-submit {
   margin-left: 50%;
@@ -493,7 +498,7 @@ i.fa-hn {
   font-size: 24px;
   text-align: left;
   font-family: source-sans-pro, latolight, Lato, 'Open Sans', 'Helvetica Neue', 'Proxima Nova', Helvetica, sans-serif;
-  font-weight: 400;
+  font-weight: 300;
 } 
 #contact-modal p {
   text-align: left;
@@ -502,11 +507,14 @@ i.fa-hn {
   font-family: source-sans-pro, latolight, Lato, 'Open Sans', 'Helvetica Neue', 'Proxima Nova', Helvetica, sans-serif;
   color: #222;
   margin: 0 0;
+  font-weight: 300;
 } 
 
 #contact-modal textarea {
   min-height: 14em;
   margin-top: 24px;
+  -moz-box-sizing: border-box; 
+  box-sizing: border-box;
 }
 #contact-modal input, #contact-modal textarea {
   outline: none;
@@ -527,6 +535,8 @@ i.fa-hn {
   -o-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  -moz-box-sizing: border-box; 
+  box-sizing: border-box;
 }
 #contact-modal input:focus, #contact-modal textarea:focus {
   border: 2px solid #222;
@@ -653,7 +663,8 @@ ul.portfolio li .portfolio-description-container .clearfix {
 ul.portfolio li .portfolio-description-container .portfolio-heading {
   color: #222;
   font-size: 24px;
-  margin-bottom: 7px;
+  margin-top: 5px;
+  margin-bottom: 15px;
   display: inline-block;
 }
 ul.portfolio li .portfolio-description-container .portfolio-heading:hover {
@@ -682,3 +693,5 @@ vertical-align: baseline;
     min-height: 0;
   }
 }
+
+.typekid-badge {display: none !important;}
